--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset=utf-8 />
   <title></title>
-  <script type="text/javascript" src="./bundle.js"></script>
+  <script type="text/javascript" src="./build/bundle.js"></script>
 </head>
 <body>
   <h1>Test</h1>
